--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@emotion/cache": "11.11.0",
-    "@emotion/react": "11.11.1",
+    "@emotion/react": "^11.14.0",
     "@emotion/server": "11.11.0",
     "@emotion/styled": "11.11.0",
     "@mui/icons-material": "5.15.15",
@@ -32,6 +32,8 @@
     "react-dom": "18.2.0",
     "react-helmet-async": "1.3.0",
     "react-mui-sidebar": "^1.3.8",
+    "react-router-dom": "^7.1.1",
+    "recharts": "^2.15.0",
     "typescript": "5.1.6"
   },
   "devDependencies": {
