--- a/package.json
+++ b/package.json
@@ -9,34 +9,57 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@date-io/date-fns": "^3.2.0",
     "@emotion/cache": "11.11.0",
     "@emotion/react": "^11.14.0",
     "@emotion/server": "11.11.0",
     "@emotion/styled": "11.11.0",
-    "@mui/icons-material": "5.15.15",
-    "@mui/lab": "5.0.0-alpha.170",
-    "@mui/material": "5.15.15",
+    "@heroui/date-picker": "^2.3.10",
+    "@heroui/react": "^2.6.14",
+    "@heroui/system": "^2.4.7",
+    "@heroui/theme": "^2.4.6",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.15.15",
+    "@mui/x-date-pickers": "^7.26.0",
     "@tabler/icons-react": "2.30.0",
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "apexcharts": "3.41.1",
+    "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.7",
+    "cloudinary": "^2.5.1",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "framer-motion": "^12.4.1",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "4.17.21",
-    "next": "14.2.3",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.5",
+    "next": "^14.2.23",
+    "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.0",
     "react": "18.2.0",
     "react-apexcharts": "1.4.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-helmet-async": "1.3.0",
-    "react-mui-sidebar": "^1.3.8",
+    "react-mui-sidebar": "^1.5.9",
     "react-router-dom": "^7.1.1",
     "recharts": "^2.15.0",
+    "tailwindcss": "^4.0.5",
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@types/lodash": "4.14.196"
+    "@types/axios": "^0.14.4",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.8",
+    "@types/lodash": "4.14.196",
+    "@types/next-auth": "^3.15.0",
+    "@types/nodemailer": "^6.4.17"
   }
 }
