Your commit message here

--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-MONGO_URI= mongodb+srv://02210241cst:hZPLnsAJhmE6v2Pq@sfscluster.nh3xc.mongodb.net/SFSecurity
-
+MONGO_URI=mongodb+srv://02210241cst:hZPLnsAJhmE6v2Pq@sfscluster.nh3xc.mongodb.net/SFSecurity?retryWrites=true&w=majority
 NODE_ENV=development
 NEXT_PUBLIC_API_URL=http://localhost:3000
 APP_PORT=5000
