--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.15",
+    "@mui/x-data-grid": "^7.27.3",
     "@mui/x-date-pickers": "^7.26.0",
     "@tabler/icons-react": "2.30.0",
     "@types/node": "20.4.5",
@@ -33,6 +34,7 @@
     "cloudinary": "^2.5.1",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.7",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "framer-motion": "^12.4.1",
@@ -57,6 +59,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.4",
     "@types/bcryptjs": "^2.4.6",
+    "@types/dotenv": "^8.2.3",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/lodash": "4.14.196",
     "@types/next-auth": "^3.15.0",
